[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/artifacts/sprites/PoisonedDagger.png" type="Texture" id=1]
[ext_resource path="res://entities/artifacts/scripts/Artifact.gd" type="Script" id=2]

[node name="Artifact" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = -632.0
margin_bottom = -352.0
rect_min_size = Vector2( 16, 16 )
mouse_default_cursor_shape = 2
script = ExtResource( 2 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_ArtifactIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ArtifactIcon_mouse_exited"]
[connection signal="tree_exited" from="." to="." method="_on_Artifact_tree_exited"]
